@@ -9,5 +9,6 @@ BUGS
 Makefile.PL
 lib/Math/BigInt/Lite.pm
 t/lite.t
+t/with.t
 t/bigintpm.t
 t/bigintpm.inc
